added camera and wifi controllers

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp-wrover-kit]
+[env:esp32dev]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 monitor_rts = 0
+board_build.flash_size = 8MB
+; built-in avaiable thanks to https://github.com/espressif/arduino-esp32/blob/master/tools/partitions/default_16MB.csv
+board_build.f_cpu = 240000000L
+; board_build.f_flash = 80000000L
+;board_build.flash_mode = qio ; broken >>> boot loop
+board_build.flash_mode = dio
+
+;board_build.arduino.upstream_packages = no
