--- a/platformio.ini
+++ b/platformio.ini
@@ -9,16 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@6.1.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 monitor_rts = 0
 board_build.flash_size = 8MB
-; built-in avaiable thanks to https://github.com/espressif/arduino-esp32/blob/master/tools/partitions/default_16MB.csv
 board_build.f_cpu = 240000000L
-; board_build.f_flash = 80000000L
-;board_build.flash_mode = qio ; broken >>> boot loop
-board_build.flash_mode = dio
-
-;board_build.arduino.upstream_packages = no
+upload_port = /dev/cu.usbserial-110
+monitor_port = /dev/cu.usbserial-110
+; lib_deps = arduino-libraries/Servo @ 1.1.8
