--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ monitor_speed = 115200
 monitor_rts = 0
 board_build.flash_size = 8MB
 board_build.f_cpu = 240000000L
-upload_port = /dev/cu.usbserial-110
-monitor_port = /dev/cu.usbserial-110
+; upload_port = /dev/cu.usbserial-110
+; /dev/cu.usbserial-2140
+; monitor_port = /dev/cu.usbserial-110
 ; lib_deps = arduino-libraries/Servo @ 1.1.8
