--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 monitor_rts = 0
+monitor_dtr = 0
 board_build.flash_size = 8MB
 board_build.f_cpu = 240000000L
 ; upload_port = /dev/cu.usbserial-110
