--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ monitor_rts = 0
 monitor_dtr = 0
 board_build.flash_size = 8MB
 board_build.f_cpu = 240000000L
-;upload_port =  /dev/cu.usbserial-110
+upload_port =  /dev/cu.usbserial-110
 ;/dev/cu.usbserial-10
 ;/dev/cu.usbserial-210
 ;monitor_port =  /dev/cu.usbserial-110
